--- a/external/aiqtoolkit-opensource-ui/package.json
+++ b/external/aiqtoolkit-opensource-ui/package.json
@@ -37,9 +37,9 @@
     "react-force-graph-2d": "^1.25.5",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
-    "react-markdown": "^8.0.5",
+    "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.12.7",
     "rehype-mathjax": "^4.0.2",
     "rehype-raw": "^7.0.0",
@@ -56,7 +56,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.1",
     "@vitest/coverage-c8": "^0.29.7",
     "autoprefixer": "^10.4.14",
@@ -65,12 +65,12 @@
     "eslint-config-next": "^14.2.10",
     "gpt-3-encoder": "^1.1.4",
     "jsdom": "^21.1.1",
+    "next-runtime-env": "^1.3.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.3.3",
     "typescript": "4.9.5",
-    "vitest": "^0.29.7",
-    "next-runtime-env": "^1.3.0"
+    "vitest": "^0.29.7"
   }
 }
