--- a/configs/hackathon_config.yml
+++ b/configs/hackathon_config.yml
@@ -1,17 +1,30 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
-# SPDX-License-Identifier: Apache-2.0
-
 # NVIDIA NeMo Agent Toolkit 黑客松配置
 # 支持用户自定义OpenAI兼容API
 
 general:
   use_uvloop: true
 
+retrievers:
+  milvus_retriever:
+    _type: milvus_retriever
+    embedding_model: milvus_embedder
+    uri: "http://127.0.0.1:19530"
+    collection_name: "chinese_traditional_colors"
+    top_k: 10
+    search_params:
+      metric_type: "IP"
+
 functions:
-  internet_search:
+  milvus_retriever:
+    _type: nat_retriever
+    retriever: milvus_retriever
+    llm_name: default_llm
+    description: "关于中式色彩的知识库"
+
+  tavily_search:
     _type: tavily_internet_search
     description: "使用Tavily API进行实时网络搜索"
-  
+
   current_datetime:
     _type: current_datetime
     description: "获取当前日期和时间"
@@ -21,18 +34,24 @@ llms:
   default_llm:
     _type: openai
     model_name: "qwen-plus"
-    api_key: "Your API Key"
+    api_key: "sk-0ba2c93fa8824d73bbc5eb047a5473fe"
     base_url: "https://dashscope.aliyuncs.com/compatible-mode/v1"
     temperature: 0.7
     max_tokens: 2048
 
+embedders:
+  milvus_embedder:
+    _type: nim
+    model_name: nvidia/nv-embedqa-e5-v5
+    truncate: "END"
+
 workflow:
   _type: react_agent
   tool_names:
-    - internet_search
+    - milvus_retriever
+    - tavily_search
     - current_datetime
   llm_name: default_llm
   verbose: true
   parse_agent_response_max_retries: 3
   max_iterations: 10
-
